--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^2.5.0",
     "@react-three/drei": "^7.0.6",
     "@react-three/fiber": "^7.0.2",
     "@testing-library/jest-dom": "^5.11.4",
