Removes errant s in French translation of footer; moves CSS for clicked links being black to index.css; changes name of website in package.json; adds CNAME file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "personal-website-experiments",
+  "name": "bridgetrosefitz.github.io",
   "version": "0.1.0",
+  "homepage": "https://bridgetro.se/",
   "private": true,
   "dependencies": {
     "@react-three/cannon": "^2.5.0",
