--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "predeploy": "npm run build && cp build/index.html build/404.html",
     "deploy": "export SET NODE_OPTIONS=--openssl-legacy-provider && gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
