--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "react-scripts start",
     "predeploy": "npm run build && cp build/index.html build/404.html",
-    "deploy": "export SET NODE_OPTIONS=--openssl-legacy-provider && gh-pages -d build",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
