work in progress animation with background for CustomMessage; removes errors caused by 'key'

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.4.4",
+    "react-use": "^17.3.2",
     "three": "^0.130.1",
     "web-vitals": "^1.0.1"
   },
